--- a/index.html
+++ b/index.html
@@ -9,9 +9,8 @@
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
      integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
      crossorigin=""></script>
-
 </head>
 <body>
-    <div id="map" style="width: 600px; height: 400px; position: relative; outline-style: none;"></div>
+    <div id="map"></div>
 </body>
 </html>
