--- a/index.html
+++ b/index.html
@@ -9,12 +9,10 @@
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
             integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
             crossorigin=""></script>
+
     <style>
         /* 加入 map 容器的大小樣式 */
-        #map {
-            height: 100vh; /* 覆蓋整個視窗高度 */
-            width: 100vw;  /* 覆蓋整個視窗寬度 */
-        }
+        #map { height: 180px; }
     </style>
 </head>
 <body>
