--- a/index.html
+++ b/index.html
@@ -11,20 +11,23 @@
             crossorigin=""></script>
 
     <style>
-        /* 加入 map 容器的大小樣式 */
         #map { height: 500px; }
     </style>
 </head>
 <body>
     <div id="map"></div>
     <script>
-        // 初始化地圖
-        var map = L.map('map').setView([25.0330, 121.5654], 13); // 台北市中心為例
+        // 初始化
+        var map = L.map('map').setView([51.505, -0.09], 13); // 倫敦
 
-        // 加入 OpenStreetMap 圖磚圖層
+        // OpenStreetMap
         L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
             attribution: '&copy; OpenStreetMap contributors'
         }).addTo(map);
+        
+        // 標點測試
+        var marker = L.marker([51.5, -0.09]).addTo(map);
+
     </script>
 </body>
 </html>
