--- a/index.html
+++ b/index.html
@@ -20,15 +20,13 @@
         // 初始化
         var map = L.map('map').setView([51.505, -0.09], 13); // 倫敦
 
-        // OpenStreetMap
+        // 實驗地圖
         L.TileLayer.sanyo = L.TileLayer.extend({
-        getTileUrl: function(coords) {
-        var i = Math.ceil( Math.random() * 4 );
-        return "https://raw.githubusercontent.com/hsiangba/hsiangba.github.io/refs/heads/main/Frame%203.png=" + i;
+        getTileUrl: "https://raw.githubusercontent.com/hsiangba/hsiangba.github.io/refs/heads/main/Frame%203.png=" ;
         },
         getAttribution: function() 
             {
-            return "<a href='https://raw.githubusercontent.com/hsiangba/hsiangba.github.io/refs/heads/main/Frame%203.png'>Sanyo</a>"
+            return "<a href='https://raw.githubusercontent.com/hsiangba/hsiangba.github.io/refs/heads/main/Frame%203.png'>測試用的地圖檔案</a>"
             }
         });
 
