--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
 
         // 實驗地圖
         L.TileLayer.sanyo = L.TileLayer.extend({
-        getTileUrl: function(coords) {"https://raw.githubusercontent.com/hsiangba/hsiangba.github.io/refs/heads/main/Frame%203.png" ;
+        getTileUrl: function(coords) {
+        var i = Math.ceil( Math.random() * 4 );
+        return "https://placekitten.com/256/256?image=" + i;
         },
         getAttribution: function() 
             {
