--- a/index.html
+++ b/index.html
@@ -17,27 +17,23 @@
 <body>
     <div id="map"></div>
     <script>
-        // 初始化
-        var map = L.map('map').setView([51.505, -0.09], 13); // 倫敦
+        // 初始化地圖，設定邊界為圖片範圍
+        var imageBounds = [[0, 0], [1000, 1000]]; // 根據圖片實際像素尺寸設定（示例用 1000x1000）
 
-        // 實驗地圖
-        L.TileLayer.sanyo = L.TileLayer.extend({
-        getTileUrl: function(coords) {
-        var i = Math.ceil( Math.random() * 4 );
-        return "https://placekitten.com/256/256?image=" + i;
-        },
-        getAttribution: function() 
-            {
-            return "<a href='https://raw.githubusercontent.com/hsiangba/hsiangba.github.io/refs/heads/main/Frame%203.png'>測試用的地圖檔案</a>"
-            }
+        var map = L.map('map', {
+            crs: L.CRS.Simple, // 使用簡單坐標系，不套用經緯度
+            minZoom: -5
         });
 
-        L.tileLayer.sanyo = function() {
-            return new L.TileLayer.sanyo();
-        }
+        // 套用圖片圖層
+        var overlay = L.imageOverlay(
+            "https://raw.githubusercontent.com/hsiangba/hsiangba.github.io/refs/heads/main/Frame%203.png",
+            imageBounds,
+            { attribution: "<a href='https://raw.githubusercontent.com/hsiangba/hsiangba.github.io/refs/heads/main/Frame%203.png'>測試用的地圖檔案</a>" }
+        ).addTo(map);
 
-        L.tileLayer.sanyo().addTo(map);
-        
+        // 自動調整地圖視角到圖片邊界
+        map.fitBounds(imageBounds);
         // 標點測試
         var marker = L.marker([51.5, -0.09]).addTo(map)
             marker.bindPopup("<b>我是一個彈出視窗</b><br>這是一個點.").openPopup();
