--- a/index.html
+++ b/index.html
@@ -27,16 +27,17 @@
 
         // 套用圖片圖層
         var overlay = L.imageOverlay(
-            "https://raw.githubusercontent.com/hsiangba/hsiangba.github.io/refs/heads/main/Frame%203.png",
+            "https://raw.githubusercontent.com/hsiangba/hsiangba.github.io/54ec500771e054bfb04987ef6b5acce1c618a843/Frame%203.svg",
             imageBounds,
-            { attribution: "<a href='https://raw.githubusercontent.com/hsiangba/hsiangba.github.io/refs/heads/main/Frame%203.png'>測試用的地圖檔案</a>" }
+            { attribution: "<a href='https://raw.githubusercontent.com/hsiangba/hsiangba.github.io/54ec500771e054bfb04987ef6b5acce1c618a843/Frame%203.svg'>測試用的地圖檔案</a>" }
         ).addTo(map);
 
         // 自動調整地圖視角到圖片邊界
         map.fitBounds(imageBounds);
         // 標點測試
-        var marker = L.marker([51.5, -0.09]).addTo(map)
-            marker.bindPopup("<b>我是一個彈出視窗</b><br>這是一個點.").openPopup();
+        var marker = L.marker([793, -832]).addTo(map)
+            marker.bindPopup("<b>三洋島</b><br>位在東杏南方，充滿著南洋風情的觀光小島.").openPopup();
+        
 
     </script>
 </body>
