--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@
         // 自動調整地圖視角到圖片邊界
         map.fitBounds(imageBounds);
         // 標點測試
-        var marker = L.marker([813, 716]).addTo(map)
+        var marker = L.marker([716,813]).addTo(map)
             marker.bindPopup("<b>三洋島</b><br>位在東杏南方，充滿著南洋風情的觀光小島.").openPopup();
-        var marker = L.marker([737, 472]).addTo(map)
+        var marker = L.marker([472, 737]).addTo(map)
             marker.bindPopup("<b>難波津島</b><br>三洋島北邊的礁嶼.").openPopup();
-        var marker = L.marker([953, 1064]).addTo(map)
+        var marker = L.marker([1064, 953]).addTo(map)
             marker.bindPopup("<b>難波万島</b><br>三洋島南邊的礁嶼.").openPopup();
-        var marker = L.marker([1160, 821]).addTo(map)
+        var marker = L.marker([821, 1160]).addTo(map)
             marker.bindPopup("<b>三洋島難波空港</b><br>ICAO代號TKSY，為三洋島上唯一的機場，可供中小型螺槳飛機(諸如ATR72或是Dash-8)起降，作為東杏唯幾的地方觀光空港，每週三班航機來回東杏本島，目前只有由東杏航空進駐.").openPopup();
         
 
