--- a/index.html
+++ b/index.html
@@ -17,6 +17,14 @@
 <body>
     <div id="map"></div>
     <script>
+        var yx = L.latLng;
+
+        var xy = function(x, y) {
+        if (Array.isArray(x)) {    // When doing xy([x, y]);
+        return yx(x[1], x[0]);
+        }
+        return yx(y, x);  // When doing xy(x, y);
+        };
         // 初始化地圖，設定邊界為圖片範圍
         var imageBounds = [[0, 0], [1720, 1705]]; // 根據圖片實際像素尺寸設定（示例用 1000x1000）
 
@@ -37,13 +45,13 @@
         // 標點測試
         var marker = L.marker([0,0]).addTo(map)
             marker.bindPopup("<b>座標0點</b><br>方便我進行開發用的定位點 實際上在遊戲地圖裡這裡什麼也沒有.").openPopup();
-        var marker = L.marker([716,1705-813]).addTo(map)
+        var marker = L.marker([8130-716,]).addTo(map)
             marker.bindPopup("<b>三洋島</b><br>位在東杏南方，充滿著南洋風情的觀光小島.").openPopup();
-        var marker = L.marker([472,1705-737]).addTo(map)
+        var marker = L.marker([713,-473]).addTo(map)
             marker.bindPopup("<b>難波津島</b><br>三洋島北邊的礁嶼.").openPopup();
-        var marker = L.marker([1064,1705-953]).addTo(map)
+        var marker = L.marker([953,-1064]).addTo(map)
             marker.bindPopup("<b>難波万島</b><br>三洋島南邊的礁嶼.").openPopup();
-        var marker = L.marker([881,1705-1187]).addTo(map)
+        var marker = L.marker([1187,-881]).addTo(map)
             marker.bindPopup("<b>三洋島難波空港</b><br>ICAO代號TKSY，為三洋島上唯一的機場，可供中小型螺槳飛機(諸如ATR72或是Dash-8)起降，作為東杏唯幾的地方觀光空港，每週三班航機來回東杏本島，目前只有由東杏航空進駐.").openPopup();
         
 
