--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         // 標點測試
         var marker = L.marker([0,0]).addTo(map)
             marker.bindPopup("<b>座標0點</b><br>方便我進行開發用的定位點 實際上在遊戲地圖裡這裡什麼也沒有.").openPopup();
-        var marker = L.marker([8130-716,]).addTo(map)
+        var marker = L.marker([8130,-716]).addTo(map)
             marker.bindPopup("<b>三洋島</b><br>位在東杏南方，充滿著南洋風情的觀光小島.").openPopup();
         var marker = L.marker([713,-473]).addTo(map)
             marker.bindPopup("<b>難波津島</b><br>三洋島北邊的礁嶼.").openPopup();
