--- a/index.html
+++ b/index.html
@@ -43,16 +43,19 @@
         // 自動調整地圖視角到圖片邊界
         map.fitBounds(imageBounds);
         // 標點測試
-        var marker = L.marker([0,0]).addTo(map)
-            marker.bindPopup("<b>座標0點</b><br>方便我進行開發用的定位點 實際上在遊戲地圖裡這裡什麼也沒有.").openPopup();
-        var marker = L.marker([8130,-716]).addTo(map)
-            marker.bindPopup("<b>三洋島</b><br>位在東杏南方，充滿著南洋風情的觀光小島.").openPopup();
-        var marker = L.marker([713,-473]).addTo(map)
-            marker.bindPopup("<b>難波津島</b><br>三洋島北邊的礁嶼.").openPopup();
-        var marker = L.marker([953,-1064]).addTo(map)
-            marker.bindPopup("<b>難波万島</b><br>三洋島南邊的礁嶼.").openPopup();
-        var marker = L.marker([1187,-881]).addTo(map)
-            marker.bindPopup("<b>三洋島難波空港</b><br>ICAO代號TKSY，為三洋島上唯一的機場，可供中小型螺槳飛機(諸如ATR72或是Dash-8)起降，作為東杏唯幾的地方觀光空港，每週三班航機來回東杏本島，目前只有由東杏航空進駐.").openPopup();
+        var zero=xy(0,0)
+        var sanyoshima=xy(813,716);
+        var nanbawan=xy(713,473);
+        var nanbatsu=xy(953,1064);
+        var tksy=xy(1187,881);
+        L.marker(zero).addTo(map).bindPopup('<b>座標0</b>');
+        L.marker(sanyoshima).addTo(map).bindPopup('<b>三洋島</b>');
+        L.marker(nanbatsu).addTo(map).bindPopup('<b>難波津島</b>');
+        L.marker(nanbawan).addTo(map).bindPopup('<b>難波万島</b>');
+        L.marker(tksy).addTo(map).bindPopup('<b>三洋島難波空港</b>');
+
+var travel = L.polyline([sol, deneb]).addTo(map);
+        
         
 
     </script>
