--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
         map.fitBounds(imageBounds);
         // 標點測試
         var zero=xy(0,0)
-        var sanyoshima=xy(813,716);
-        var nanbawan=xy(713,473);
-        var nanbatsu=xy(953,1064);
-        var tksy=xy(1187,881);
+        var sanyoshima=xy(813,1705-716);
+        var nanbatsu=xy(713,1705-473);
+        var nanbawan=xy(953,1705-1064);
+        var tksy=xy(1187,1705-881);
         L.marker(zero).addTo(map).bindPopup('<b>座標0</b>');
         L.marker(sanyoshima).addTo(map).bindPopup('<b>三洋島</b>');
         L.marker(nanbatsu).addTo(map).bindPopup('<b>難波津島</b>');
