--- a/index.html
+++ b/index.html
@@ -11,11 +11,19 @@
             crossorigin=""></script>
 
     <style>
-        #map { height: 600px; }
+        body {
+            padding: 0;
+            margin: 0;
+        }
+        html, body, #map {
+            height: 100%;
+            width: 100vw;
+        }
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     </style>
 </head>
 <body>
-    <div id="map"></div>
+    <div id="map" ></div>
     <script>
         var yx = L.latLng;
 
