--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <link rel="shortcut icon" href="https://raw.githubusercontent.com/hsiangba/hsiangba.github.io/refs/heads/main/homo.ico">
+    <link rel="icon" href="https://raw.githubusercontent.com/hsiangba/hsiangba.github.io/refs/heads/main/homo.ico" type="image/x-icon">
     <title>地圖檢視器</title>
-    <link></link>
     <meta charset="utf-8" />
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
           integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
