--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
      <!-- Modal -->
 <body>
 <div class="modal fade" id="myModal" role="dialog">
+    <script src="dialog/dialog.js"></script>
     <div class="modal-dialog">
         
         <div class="modal-content">
@@ -45,21 +46,6 @@
   </div>
   
 </div>
-<script>
-        $(document).ready(function(){
-    var valueNum = window.sessionStorage.userdata;
-    if (valueNum != "1") {
-      $("#myModal").modal();
-    }
-});
-  function cancel(){
-    window.sessionStorage.userdata = "1";
-  }
-  function show(){
-    window.sessionStorage.userdata = "0";
-    $("#myModal").modal();
-  }
-</script>
     <div id="map" ></div>
     <script>
         var yx = L.latLng;
