--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <link rel="icon" href="https://raw.githubusercontent.com/hsiangba/hsiangba.github.io/refs/heads/main/homo.ico" type="image/x-icon">
     <title>地圖檢視器</title>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
           integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
           crossorigin=""/>
@@ -21,78 +23,71 @@
             height: 100%;
             width: 100vw;
         }
-        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+
+        .text-label {
+            color: black;
+            font-weight: bold;
+            background-color: rgba(255,255,255,0.7);
+            padding: 2px 4px;
+            border-radius: 4px;
+            white-space: nowrap;
+            pointer-events: none; /* 不擋滑鼠事件 */
+        }
     </style>
 </head>
-     <!-- Modal -->
+
 <body>
-    <div id="map" ></div>
+    <div id="map"></div>
     <script>
         var yx = L.latLng;
-
         var xy = function(x, y) {
-        if (Array.isArray(x)) {    // When doing xy([x, y]);
-        return yx(x[1], x[0]);
-        }
-        return yx(y, x);  // When doing xy(x, y);
+            if (Array.isArray(x)) return yx(x[1], x[0]);
+            return yx(y, x);
         };
-        // 初始化地圖，設定邊界為圖片範圍
-        var imageBounds = [[0, 0], [1720, 1705]]; // 根據圖片實際像素尺寸設定（示例用 1000x1000）
+
+        var imageBounds = [[0, 0], [1720, 1705]];
 
         var map = L.map('map', {
-            crs: L.CRS.Simple, // 使用簡單坐標系，不套用經緯度
+            crs: L.CRS.Simple,
             minZoom: -5
         });
 
-        // 套用圖片圖層
         var overlay = L.imageOverlay(
             "https://raw.githubusercontent.com/hsiangba/hsiangba.github.io/54ec500771e054bfb04987ef6b5acce1c618a843/Frame%203.svg",
             imageBounds,
             { attribution: "<a href='https://raw.githubusercontent.com/hsiangba/hsiangba.github.io/54ec500771e054bfb04987ef6b5acce1c618a843/Frame%203.svg'>測試用的地圖檔案</a>" }
         ).addTo(map);
 
-        // 自動調整地圖視角到圖片邊界
         map.fitBounds(imageBounds);
-        // 標點測試
-function addTextMarker(position, text) {
-    var textIcon = L.divIcon({
-        className: 'text-label', // 自訂 class 用於樣式
-        html: `<div>${text}</div>`,
-        iconSize: [100, 20],  // 大小可依需求調整
-        iconAnchor: [0, 0]    // 控制文字對齊方式
-    });
-    L.marker(position, { icon: textIcon }).addTo(map);
-}
 
-        // 原始座標
+        function addTextMarker(position, text) {
+            var textIcon = L.divIcon({
+                className: 'text-label',
+                html: `<div>${text}</div>`,
+                iconSize: [100, 20],
+                iconAnchor: [0, 0]
+            });
+            L.marker(position, { icon: textIcon }).addTo(map);
+        }
+
         var zero = xy(0, 0);
         var sanyoshima = xy(813, 1705 - 716);
         var nanbatsu = xy(713, 1705 - 473);
         var nanbawan = xy(953, 1705 - 1064);
         var tksy = xy(1187, 1705 - 881);
 
-        // 使用純文字標註
         addTextMarker(zero, '座標0');
         addTextMarker(sanyoshima, '三洋島');
         addTextMarker(nanbatsu, '難波津島');
         addTextMarker(nanbawan, '難波万島');
         addTextMarker(tksy, '三洋島難波空港');
-        .text-label {
-    color: black;
-    font-weight: bold;
-    background-color: rgba(255,255,255,0.7);
-    padding: 2px 4px;
-    border-radius: 4px;
-    white-space: nowrap;
-    pointer-events: none; /* 不擋滑鼠事件 */
-}
-var travel = L.polyline([sol, deneb]).addTo(map);
-        
-        
 
+        // 若未定義 sol、deneb，請移除或定義後再使用
+        // var travel = L.polyline([sol, deneb]).addTo(map);
     </script>
 </body>
 </html>
+
 
 
 
