--- a/index.html
+++ b/index.html
@@ -30,12 +30,31 @@
             font-size: 13px;
             font-weight: 500;
             text-align: center;
-            background: none;
-            padding: 0;
-            border: none;
             white-space: nowrap;
-            pointer-events: none;
+            pointer-events: auto;
             transform: translate(-50%, -100%);
+            text-shadow:
+                -1px -1px 0 #fff,
+                 1px -1px 0 #fff,
+                -1px  1px 0 #fff,
+                 1px  1px 0 #fff;
+            cursor: default;
+        }
+
+        .text-label:hover {
+            color: #d00;
+        }
+
+        .text-label::after {
+            content: '';
+            display: block;
+            width: 6px;
+            height: 6px;
+            margin: 4px auto 0 auto;
+            background-color: #d00;
+            border: 2px solid white;
+            border-radius: 50%;
+            box-shadow: 0 0 2px #00000088;
         }
     </style>
 </head>
