--- a/index.html
+++ b/index.html
@@ -81,10 +81,10 @@
 
     // 座標定義
     var zero = xy(0, 0);
-    var sanyoshima = xy(813, 1705 - 716);
-    var nanbatsu = xy(713, 1705 - 473);
-    var nanbawan = xy(953, 1705 - 1064);
-    var tksy = xy(1187, 1705 - 881);
+    var sanyoshima = xy(813, 1705-716);
+    var nanbatsu = xy(713, 1705-473);
+    var nanbawan = xy(953, 1705-1064);
+    var tksy = xy(1187, 1705-881);
 
     // 加入標籤
     addTextMarker(zero, '座標0');
@@ -95,3 +95,4 @@
 </script>
 </body>
 </html>
+
