--- a/index.html
+++ b/index.html
@@ -18,7 +18,11 @@
         .label-dot-wrapper {
             position: relative;
             transform: translate(-50%, -50%);
+            pointer-events: auto;
+        }
+        .dot {
             pointer-events: none;
+        }
             white-space: nowrap;
         }
 
@@ -94,6 +98,7 @@
 </script>
 </body>
 </html>
+
 
 
 
