--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
     });
 
     // 載入 JSON 並建立地標
-    fetch('toponym.json')
+    fetch('https://hsiangba.github.io/toponym.json')
       .then(response => response.json())
       .then(data => {
         data.forEach(item => {
@@ -155,3 +155,4 @@
   </script>
 </body>
 </html>
+
