--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 
     map.on('zoomend', updateMarkerVisibility);
 
-    fetch('toponym.json')
+    fetch('https://hsiangba.github.io/toponym.json.json')
       .then(response => response.json())
       .then(data => {
         data.forEach(item => {
@@ -177,5 +177,6 @@
   </script>
 </body>
 </html>
+
 
 
